--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-﻿@charset "utf-8";
+@charset "utf-8";
 
 header{
   margin-top: 30px;
@@ -74,4 +74,8 @@ table th {
 table td { 
   padding: 3px 10px; 
   border: solid 1px black; 
+}
+#irotsuke a{
+    background-color: #33FFED;
+    font-size: 20px;
 }
